fix card responsiveness issue not aligning

--- a/src/component/card/card.scss
+++ b/src/component/card/card.scss
@@ -3,7 +3,6 @@
     height: 160px;
     background-color: #ffffff;
     margin-bottom: 10px;
-    margin-right: 30px;
     
     &__content {
         padding: 26px;
@@ -45,7 +44,5 @@
     @media (max-width: 768px) {
         width: 100%;
         height: 160px;
-        margin-bottom: 30px;
-        margin-right: 0px;
     }
 }
